--- a/src/layouts/MainLayouts.astro
+++ b/src/layouts/MainLayouts.astro
@@ -12,8 +12,8 @@ import '../styles/global.css';
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-gray-50 text-gray-900">
-    <nav class="p-5 bg-white shadow-sm sticky top-0 z-50">
+  <body class="bg-emerald-900 text-yellow-400">
+    <nav class="p-5 bg-emerald-900 text-yellow-400 shadow-sm sticky top-0 z-50">
       <div class="container mx-auto flex justify-between items-center">
         <a href="/LORA.github.io/" class="flex items-center gap-2 group">
   <img 
@@ -21,14 +21,14 @@ import '../styles/global.css';
     alt="LORA Logotyp" 
     class="h-16 w-auto transition-transform group-hover:scale-105"
   />
-  <span class="font-bold text-2xl text-blue-600 tracking-tighter group-hover:text-blue-700">
-    LORA
+  <span class="font-bold text-2xl text-yellow-400 tracking-tighter group-hover:text-blue-700">
+    LORA nätet
   </span>
 </a>
 
         <div class="flex gap-6">
           <a href="/LORA.github.io/" class="text-sm font-medium hover:text-blue-600 transition-colors">Hem</a>
-          <a href="/LORA.github.io/nodes" class="text-sm font-medium hover:text-blue-600 transition-colors">Driftstatus - översikt</a>
+          <a href="/LORA.github.io/nodes" class="text-sm font-medium hover:text-Yellow-400 transition-colors">Driftstatus - översikt</a>
         </div>
       </div>
     </nav>
