--- a/src/layouts/MainLayouts.astro
+++ b/src/layouts/MainLayouts.astro
@@ -12,8 +12,8 @@ import '../styles/global.css';
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="bg-emerald-900 text-yellow-400">
-    <nav class="p-5 bg-emerald-900 text-yellow-400 shadow-sm sticky top-0 z-50">
+  <body class="bg-slate-400 text-yellow-400">
+    <nav class="p-5 bg-slate-500 text-yellow-400 shadow-sm sticky top-0 z-50">
       <div class="container mx-auto flex justify-between items-center">
         <a href="/LORA.github.io/" class="flex items-center gap-2 group">
   <img 
