--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,7 +6,7 @@ import MainLayouts from '../layouts/MainLayouts.astro';
   <div class="py-20 text-center">
     <h1 class="text-6xl font-black text-gray-900 mb-6 italic">LORA</h1>
     <p class="text-xl text-gray-600 mb-10 max-w-2xl mx-auto">
-      Välkommen till vårt lokala Meshtastic-nätverk. Vi bygger infrastruktur för öppen och fri kommunikation.
+      Välkommen till vårt Regionala Meshtastic-nätverk. Vi bygger infrastruktur för öppen och fri kommunikation.
     </p>
     
     <div class="flex gap-4 justify-center">
